Fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
 
 }
 
